# noisebox

./: CMakeLists.txt  README.md
cmake/: FindBerkeleyDB.cmake  FindJsonCpp.cmake  FindLibdaemon.cmake  FindZMQ.cmake
contrib/: LCDTemperature.py
httpd/: index.htm  nb-httpd
httpd/css/: fontello-codes.css  fontello-embedded.css  fontello-ie7-codes.css  jt-narrow.css
httpd/font/: fontello.eot
lcd/: nb-lcd
lib/: daemon.cc  daemon.h  i2c-fake.h  iic.h  util.h  wire.h
src/: sensord.cc  stored.cc
tools/: daemon_test.cc  htu21d.cc  mcp9808.cc  nb-graph.py  nb-plot.py
www/: LICENSE-fontello.txt  apache.conf  gunicorn.conf  index.htm  nginx.conf  noisebox.py  noisebox.wsgi
www/css/: fontello-ie7.css  fontello.css  jt-narrow.css  noisebox.css
www/font/: fontello.eot
